apps/base/dashy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    app.kubernetes.io/component: dashy
