apps/base/dashy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy-httproute
  namespace: dashy
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "mdch-lab.dev"
  rules:
    - backendRefs:
      - name: dashy
        port: 8080
